Refactor armor materials and processing system
- Removed the old ArmorMaterials class and replaced it with CNArmorMaterials for better organization and registration of armor materials.
- Updated CNFanProcessingTypes to utilize new recipe handling methods and improved processing logic.
- Refactored EnrichedRecipe to use SingleRecipeInput for better compatibility with the new recipe system.
- Enhanced ReactorBluePrintItem and ReactorBluePrintItemPacket for improved data handling and packet communication.
- Updated ReactorControllerBlock and ReactorControllerBlockEntity to streamline item interactions and data serialization.
- Refactored event handling in EventTriggerBlock and EventTextOverlay for better network communication and overlay management.
- Improved HUD overlays to utilize DeltaTracker for smoother rendering and updates.
- General code cleanup and organization across multiple classes for better readability and maintainability.